Andon (08/Feb/02)
------------------
Additions (Snowblind):
 + Enhanced the status bar.. Displays zone name now

Additions (Snowblind):
 + Enhanced the status bar.. It's MUCH nicer now than it was.

Additions (CapnBry):
 + Added range circles to the map
 + Added --dumpunknown to the command line switches
 + Added projection of mob / player positions to aproximate current location
   based on heading and speed.
 + Added support for "Stop mob movement" stream.

Additions (Me):
 + Added a '--help' command line switch.
 + Added a GUI element in the preferences to toggle range
   circles on and off at run-time.
 + Added distance fading agro circles.. The intensity of the
   R channel in the RGB color now changes depending upon your
   distance from the mob.
 + Added a GUI element in the preferences to toggle agro
   distance fading.

Bug fixes (CapnBry):
 + Changed the range circles to be dark grey, so that they
   actually show up now.

Bug fixes (Me):
 + Added an experimental fix for the QT_NETWORK_MODULE issues
   experienced at compile time. The method I used for this is
   questionable at best.


Andon (07/Feb/02)
------------------

Documentation:
 + Fixed a lingering issue with the CVS commandline listed in
   INSTALL


Andon (07/Feb/02)
------------------

Additions:
 + Added preliminary support for NVidia GLX specific optimizations
   (expect to see this support utilized in the near future!)
 + As a result of the abovementioned addition, Excalibur now uses
   a different method for detecting DRI support on your machine,
   the new method is much more intelligent and verbose.

Documentation:
 + Fixed a few issues where some portions of the Excalibur docs
   were violating the GPL..
 + Fixed a few typos made in the INSTALL docs.
 + Fixed a few invalid claims made in README and INSTALL.
 + Added minimal info for installing Excalibur on Debian UNSTABLE.


Andon (07/Feb/02)
------------------

Additions:
 + Removed the lame X/Y/Z / Zone indicator above the spawn