@@ -252,10 +252,12 @@ void exConnection::processPacket(exPacket * p)
 	    break;
 	  case 0x12:
 	    parsePlayerHeadUpdate(p);
-	    break;	
+	    break;
+#ifdef ALPHA_QUALITY
 	  case 0xbd:
 	    parseObjectStopped(p);
 	    break;
+#endif
 	  default:
 	    if (prefs.dump_unknown_packets)
 		dumpPacket(command, p);
@@ -322,9 +324,11 @@ void exConnection::processPacket(exPacket * p)
 	  case 0x12:
 	    parsePlayerHeadUpdate(p);
 	    break;
+#ifdef ALPHA_QUALITY
 	  case 0xbd:
 	    parseObjectStopped(p);
 	    break;
+#endif
 	  case 0x8a:
 	      p->skip(2);
 	      bigver = p->getByte();
@@ -502,6 +506,7 @@ void exConnection::processPacket(exPacket * p)
     }
 }
 
+#ifdef ALPHA_QUALITY
 void exConnection::parseObjectStopped(exPacket *p)
 {
     unsigned int infoid = p->getShort();
@@ -509,6 +514,7 @@ void exConnection::parseObjectStopped(exPacket *p)
     if (mob)  
 	mob->setSpeed(0);
 }
+#endif
 
 void exConnection::parseMobPosUpdate(exPacket *p)
 {
