@@ -218,6 +218,7 @@ unsigned int exMob::getY() const {
    return y;
 }
 
+#ifdef ALPHA_QUALITY
 unsigned int exMob::getProjectedX() {
     if (exTick == _lastprojectedX)
 	return projectedX;
@@ -245,6 +246,7 @@ unsigned int exMob::getProjectedY() {
     _lastprojectedY = exTick;
     return projectedY;
 }
+#endif
 
 unsigned int exMob::getZ() const {
    return z;
